Fix in-page anchor scroll margin
`--space-large` is too small.

--- a/src/css/core.css
+++ b/src/css/core.css
@@ -188,5 +188,5 @@ th {
 
 /* Universal */
 [id] {
-	scroll-margin-block-start: var(--space-large);
+	scroll-margin-block-start: var(--space-huge);
 }
